# phantasyserver

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.MD  block.json  clippy.toml  lobby.mp  master_ship.toml  names.mp
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml
cmd-derive/: Cargo.toml
cmd-derive/src/: lib.rs
data/: base_enemy_stats.json  friend.json  item_attrs.json  item_names.json  lobby.mp  master_ship.toml  patch_server.toml  ship.toml
data/attack_stats/: common.json
data/attack_stats/player/: unarmed.json
data/attack_stats/player/braver/: basic.json  bow.json
data/attack_stats/player/ranger/: basic.json
data/class_data/: bouncer.json  braver.json  force.json  hunter.json  ranger.json  summoner.json
data/class_stats/: battle_warrior.json  bouncer.json  braver.json  challenger.json  etole.json  fighter.json  force.json  gunner.json  hero.json  hunter.json  level_modifiers.json  luster.json  phantom.json  ranger.json  summoner.json  techer.json
data/enemies/falspawn/: soldier_ant.json
data/maps/battle_lobby/: data.json
data/maps/battle_lobby/events/main_lobby_1/: all_events.json
data/maps/battle_lobby/npcs/main_lobby_1/: all_npcs.json
data/maps/battle_lobby/objects/main_lobby_1/: all_objects.json
data/maps/challenge_lobby/: data.json
data/maps/challenge_lobby/events/main_lobby_1/: all_events.json
data/maps/challenge_lobby/npcs/main_lobby_1/: all_npcs.json
data/maps/challenge_lobby/objects/main_lobby_1/: all_objects.json
data/maps/lobby/: data.json
data/maps/lobby/events/bridge_107/: all_events.json
data/maps/lobby/events/bridge_4/: all_events.json
data/maps/lobby/events/cafe_160/: all_events.json
data/maps/lobby/events/cafe_5/: all_events.json
data/maps/lobby/events/casino_104/: all_events.json
data/maps/lobby/events/casino_2/: all_events.json
data/maps/lobby/events/main_lobby_1/: all_events.json
data/maps/lobby/events/main_lobby_106/: all_events.json
data/maps/lobby/luas/: oa_transfer_machine.lua  on_cutscene_end.lua  on_map_loaded.lua  on_player_load.lua
data/maps/lobby/npcs/bridge_107/: all_npcs.json
data/maps/lobby/npcs/bridge_4/: all_npcs.json
data/maps/lobby/npcs/cafe_160/: all_npcs.json
data/maps/lobby/npcs/cafe_5/: all_npcs.json
data/maps/lobby/npcs/casino_104/: all_npcs.json
data/maps/lobby/npcs/casino_2/: all_npcs.json
data/maps/lobby/npcs/main_lobby_1/: all_npcs.json
data/maps/lobby/npcs/main_lobby_106/: all_npcs.json
data/maps/lobby/objects/bridge_107/: all_objects.json
data/maps/lobby/objects/bridge_4/: all_objects.json
data/maps/lobby/objects/cafe_160/: all_objects.json
data/maps/lobby/objects/cafe_5/: all_objects.json
data/maps/lobby/objects/casino_104/: all_objects.json
data/maps/lobby/objects/casino_2/: all_objects.json
data/maps/lobby/objects/main_lobby_1/: all_objects.json  entry_teleporters.json  exit_teleporters.json
data/maps/lobby/objects/main_lobby_106/: all_objects.json  exit_teleporters.json  teleporters.json
data/quests/200030/: data.json
data/quests/200030 - Test Quest/: data.json
data/quests/200030 - Test Quest/map/: map.json
data/quests/200030 - Test Quest/map/events/campship_1/: all_events.json
data/quests/200030 - Test Quest/map/objects/campship_1/: all_objects.json
data/quests/200030 - Test Quest/map/transporters/campship_1/: all_transporters.json
data/quests/200030/map/: map.json
data/quests/200030/map/events/campship_150/: all_events.json
data/quests/200030/map/luas/: on_player_load.lua
data/quests/200030/map/objects/campship_150/: all_objects.json
data/quests/200030/map/objects/second_zone_393/: all_objects.json
data/quests/200030/map/transporters/campship_150/: all_transporters.json
data/quests/50570/: data.json
data/quests/50570/enemies/: all_enemies.json
data/quests/50570/map/: map.json
data/quests/50570/map/events/campship_150/: all_events.json
data/quests/50570/map/events/first_zone_392/: all_events.json
data/quests/50570/map/luas/: on_player_load.lua  on_questwork.lua
data/quests/50570/map/objects/campship_150/: all_objects.json
data/quests/50570/map/objects/first_zone_392/: all_objects.json
data/quests/50570/map/objects/second_zone_393/: all_objects.json
data/quests/Story Quests/EP1/700000 - An Encounter with Xion/: data.json
data/quests/Story Quests/EP1/700000 - An Encounter with Xion/map/: map.json
data/quests/Story Quests/EP1/700000 - An Encounter with Xion/map/luas/: on_cutscene_end.lua  on_map_loaded.lua
data/quests/Story Quests/EP1/700020 - A Mysterious Voice/: data.json
data/quests/Story Quests/EP1/700020 - A Mysterious Voice/map/: map.json
data/quests/story quests/EP1/An Encounter with Xion/map/: map.json
data_compiler/: Cargo.toml
data_compiler/src/: ice.rs  main.rs
data_structs/: Cargo.toml
data_structs/src/: flags.rs  inventory.rs  lib.rs  map.rs  master_ship.rs  quest.rs  stats.rs
luas/: oa_sit_point.lua  oa_transfer_machine.lua
master_ship/: Cargo.toml
master_ship/src/: lib.rs  main.rs  sql.rs
patch_server/: Cargo.toml
patch_server/src/: main.rs
ppac_reader/: Cargo.toml
ppac_reader/src/: main.rs
quests/eq/: quest_50570.mp
ship_server/: Cargo.toml
ship_server/luas/: oa_sit_point.lua  oa_transfer_machine.lua
ship_server/luas/eq/50570/: on_player_load.lua
ship_server/src/: battle_stats.rs  block.rs  ice.rs  inventory.rs  invites.rs  lib.rs  main.rs  map.rs  master_conn.rs  mutex.rs  palette.rs  party.rs  quests.rs  settings.rs  sql.rs  thread_pool.rs
ship_server/src/user/: mod.rs
ship_server/src/user/handlers/: arksmission.rs  chat.rs  friends.rs  item.rs  login.rs  missionpass.rs  mod.rs  object.rs  palette.rs  party.rs  player_status.rs  quest.rs  server.rs  settings.rs  symbolart.rs
src/: ice.rs  inventory.rs  invites.rs  lib.rs  main.rs  map.rs  map_transformer.rs  party.rs  sql.rs
src/user/: mod.rs
src/user/handlers/: chat.rs  item.rs  login.rs  missionpass.rs  mod.rs  object.rs  palette.rs  party.rs  server.rs  settings.rs  symbolart.rs
(+5 files in other folders)
