[workspace]

members = ["ship_server", "data_compiler", "data_structs", "master_ship", "cmd-derive"]
exclude = ["ppac_reader"]
resolver = "2"

[workspace.dependencies]
# pso2packetlib = { path = "../pso2packetlib", default-features = false }
pso2packetlib = { version = "0.4.0", default-features = false }

[profile.release]
lto = true
