[package]
name = "data_structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rmp = ["dep:rmp-serde"]
json = ["dep:serde_json"]
toml = ["dep:toml"]
ship = ["dep:tokio", "dep:p256", "dep:rand_core", "dep:sha2", "dep:aes-gcm", "rmp"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
pso2packetlib = { workspace = true, features = ["serde", "item_attrs"] }
rmp-serde = { version = "1.3.0", optional = true }
serde_json = { version = "1.0.134", optional = true }
thiserror = "2.0.9"
tokio = { version = "1.42.0", optional = true, features = ["full"] }
p256 = { version = "0.13.2", optional = true, features = ["ecdh"] }
rand_core = { version = "0.6.4", optional = true }
sha2 = { version = "0.10.8", optional = true }
aes-gcm = { version = "0.10.3", optional = true }
zstd = "0.13.2"
toml = { version = "0.8.19", optional = true }
bincode = "1.3.3"
