[package]
name = "master_ship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
pso2packetlib = { workspace = true, features = ["serde", "split_connection", "tokio"] }
parking_lot = { version = "0.12.3", features = ["send_guard"] }
data_structs = { path = "../data_structs", features = ["rmp", "ship"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "migrate"] }
serde = { version = "1.0.203", features = ["derive"] }
p256 = { version = "0.13.2",  features = ["ecdh"] }
thiserror = "1.0.61"
argon2 = "0.5.3"
rand_core = "0.6.4"
toml = "0.8.13"
rmp-serde = "1.3.0"
log = { version = "0.4.21", features = ["serde", "release_max_level_info", "std"] }
simplelog = "0.12.2"
