[package]
name = "ppak_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.5.0", features = ["i128"]}
pso2packetlib = {workspace = true, features = ["serde", "ppac"]}
data_structs = { path = "../data_structs", features = ["rmp", "json"] }
serde = "1.0.203"
serde_json = "1.0.120"
