[package]
name = "pso2ship_server"
version = "0.1.0"
edition = "2024"
default-run = "pso2ship_server"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rsa = "0.9.10"
pso2packetlib = { workspace = true, default-features = false, features = ["serde", "split_connection", "vita_enc", "base_enc", "ppac", "item_attrs", "tokio"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "any"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
rmp-serde = "1.3.1" 
half = "2.7.1"
serde = "1.0.228"
memory-stats = "1.2.0"
mlua = { version = "0.11.6", features = ["serialize", "vendored", "send", "async"] }
parking_lot = {version = "0.12.5", features = ["send_guard"]}
indicatif = "0.18.4"
data_structs = { path = "../data_structs", features = ["rmp", "ship"] }
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.1"
log = { version = "0.4.29", features = ["serde", "release_max_level_info", "std"] }
simplelog = "0.12.2"
dialoguer = "0.12.0"
sha2 = "0.11.0"
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive"] }
cmd-derive = { path = "../cmd-derive" }

# luajit doesn't compile on musl or on arm
[target.'cfg(any(target_env = "musl", target_arch = "arm"))'.dependencies.mlua]
version = "0.11.6"
features = ["lua51"]
[target.'cfg(not(any(target_env = "musl", target_arch = "arm")))'.dependencies.mlua]
version = "0.11.6"
features = ["luajit"]
